--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Chan</h1>
+            <h2>Backend Developer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        자기소개
                     </p>
                 </div>
             </div>
@@ -86,7 +84,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <!-- <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -108,7 +106,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- End #experience -->
@@ -116,30 +114,23 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>(클라우드운영관리)클라우드 아키텍처 운영 및 보안 전문가 양성</h3>
+            <span class="education-date">2021년 05월 06일 ~ 2021년 10월 06일</span>
+            <h4>KG아이티뱅크학원 - 수료</h4>
+            <!-- <p>
+                90일, 총 800시간
+                HW운영관리,NW운영관리,IT시스템서비스수준관리,보안운영관리,DB운영관리,응용SW운영관리,IT시스템통합운영관리,ITCookBook,파이썬forBeginner,IT시스템운영안정성관리,아마존웹서비스AWS패턴별 구축.운용 가이드,오픈스택 관리바이블,파이썬 실무 프로그래밍,IT시스템 사용자 지원,프로그래밍 언어 활용,소프트웨어 개발 보안 구축,시스템 보안 구축,정보시스템 진단,IT시스템자원획득관리,배워서 바로 쓰는 14가지 AWS 구축 패턴
+            </p> -->
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>자바 벡엔드 개발자 양성과정</h3>
+            <span class="education-date">2021년 11월 16일 ~ 2022년 02월 24일</span>
+            <h4>코리아아이티 아카데미학원 - 수료</h4>
+            <!-- <p>
+                70일, 총 280시간
+            </p> -->
         </div>
         <!-- End .education-block -->
     </div>
@@ -188,32 +179,20 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
+            <li>AWS</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>MySQL</li>
+            <li>MariaDB</li>
+            <li>Network</li>
+            <li>Windows server</li>
+            <li>Linux</li>
+            <li>Vmware</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>jquery</li>
+            <li>bootstrap5</li>
+            <li>JAVA</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -235,17 +214,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 copyright">
+                <!-- <div class="col-sm-5 copyright">
                     <p>
                         Copyright &copy; <span id="current-year">2022</span> YOUR NAME
                     </p>
-                </div>
+                </div> -->
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div class="col-sm-5 social">
+                <!-- <div class="col-sm-5 social">
                     <ul>
                         <li>
                             <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -266,7 +245,7 @@
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
