--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        자기소개
+                        저는 신입 자바 백엔드 개발자를 꿈꾸는 권용찬 입니다.
                     </p>
                 </div>
             </div>
@@ -146,11 +146,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>프로젝트 이름</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            설명
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">프로젝트 링크</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -162,11 +162,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>프로젝트 이름</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            설명
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">프로젝트 링크</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
