--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>프로젝트 이름</h3>
+                        <h3>게시판</h3>
                         <p>
                             설명
                         </p>
-                        <a href="#">프로젝트 링크</a>
+                        <a href="https://github.com/yongchankwon/Board.git">https://github.com/yongchankwon/Board.git</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -187,12 +187,12 @@
             <li>Windows server</li>
             <li>Linux</li>
             <li>Vmware</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>jquery</li>
-            <li>bootstrap5</li>
             <li>JAVA</li>
+            <li>HTML/CSS</li>
+            <li>JavaScript</li>
+            <li>JQuery</li>
+            <li>BootStrap5</li>
+            <li>JSP/Servlet</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -200,7 +200,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="elieen0716@naver.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
