--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>게시판</h3>
+                        <h3>Board project</h3>
                         <p>
-                            설명
+                            Board project
                         </p>
                         <a href="https://github.com/yongchankwon/Board.git">https://github.com/yongchankwon/Board.git</a>
                     </div>
