--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
+        <!-- <div id="experience-timeline"> -->
             <!-- <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
@@ -116,9 +116,9 @@
         <div class="education-block">
             <h3>(클라우드운영관리)클라우드 아키텍처 운영 및 보안 전문가 양성</h3>
             <span class="education-date">2021년 05월 06일 ~ 2021년 10월 06일</span>
-            <h4>KG아이티뱅크학원 - 수료</h4>
+            <h4>90일, 총 800시간<br>
+                KG아이티뱅크학원 - 수료</h4>
             <!-- <p>
-                90일, 총 800시간
                 HW운영관리,NW운영관리,IT시스템서비스수준관리,보안운영관리,DB운영관리,응용SW운영관리,IT시스템통합운영관리,ITCookBook,파이썬forBeginner,IT시스템운영안정성관리,아마존웹서비스AWS패턴별 구축.운용 가이드,오픈스택 관리바이블,파이썬 실무 프로그래밍,IT시스템 사용자 지원,프로그래밍 언어 활용,소프트웨어 개발 보안 구축,시스템 보안 구축,정보시스템 진단,IT시스템자원획득관리,배워서 바로 쓰는 14가지 AWS 구축 패턴
             </p> -->
         </div>
@@ -127,10 +127,15 @@
         <div class="education-block">
             <h3>자바 벡엔드 개발자 양성과정</h3>
             <span class="education-date">2021년 11월 16일 ~ 2022년 02월 24일</span>
-            <h4>코리아아이티 아카데미학원 - 수료</h4>
-            <!-- <p>
-                70일, 총 280시간
-            </p> -->
+            <h4>70일, 총 280시간<br>
+                코리아아이티 아카데미학원 - 수료</h4>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>학점은행제 컴퓨터공학전공</h3>
+            <span class="education-date">2020년 10월 31일 ~ </span>
+            <h4></h4>
         </div>
         <!-- End .education-block -->
     </div>
@@ -146,7 +151,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Board project</h3>
+                        <h3>Board</h3>
                         <p>
                             Board project
                         </p>
@@ -162,11 +167,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>프로젝트 이름</h3>
+                        <h3>프로젝트</h3>
                         <p>
-                            설명
+                            소개
                         </p>
-                        <a href="#">프로젝트 링크</a>
+                        <a href="#">링크</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -181,17 +186,16 @@
         <ul>
             <li>AWS</li>
             <li>MySQL</li>
-            <li>MariaDB</li>
-            <li>Network</li>
-            <li>Windows server</li>
-            <li>Linux</li>
-            <li>Vmware</li>
             <li>JAVA</li>
             <li>HTML/CSS</li>
             <li>JavaScript</li>
             <li>JQuery</li>
             <li>BootStrap5</li>
             <li>JSP/Servlet</li>
+            <li>Network</li>
+            <li>Vmware</li>
+            <li>Windows server</li>
+            <li>Linux</li>
         </ul>
     </div>
     <!-- End #skills -->
