--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>프로젝트</h3>
+                        <h3> 프로젝트 이름 </h3>
                         <p>
-                            소개
+                            프로젝트 소개
                         </p>
-                        <a href="#">링크</a>
+                        <a href="#"> 프로젝트 링크 </a>
                     </div>
                     <!-- End .project-info -->
                 </div>
