--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
+                <!-- <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
-                    </div>
+                    </div> -->
                     <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3> 프로젝트 이름 </h3>
+                    <!-- <div class="project-info">
+                        <h3>프로젝트 이름</h3>
                         <p>
                             프로젝트 소개
                         </p>
-                        <a href="#"> 프로젝트 링크 </a>
-                    </div>
+                        <a href="#">프로젝트 링크</a>
+                    </div> -->
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
