--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <div class="col-md-8">
                     <p>
                         저는 신입 자바 백엔드 개발자를 꿈꾸는 권용찬 입니다.<br> 
-                        혼자 프로젝트를 진행하면서 막히는 부분도 많았고 힘들었지만 찾아보고 해결했을때 재미와 성취감을 느꼈습니다.<br>
+                        혼자 프로젝트를 진행하면서 막히는 부분도 많았고 힘들었지만 찾아보고 해결했을때<br>
+                        재미와 성취감을 느꼈습니다.<br>
                         많이 부족하지만 사람들과 일하고 배우며 성장하고 싶습니다.
                     </p>
                 </div>
