--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <li>
                 <a href="#about">About</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#experience">Experience</a>
+            </li> -->
+            <li>
+                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#education">Education</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -84,8 +84,8 @@
     </div>
     <!-- End #about -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+    <!-- <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2> -->
         <!-- <div id="experience-timeline"> -->
             <!-- <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
@@ -114,16 +114,32 @@
     </div>
     <!-- End #experience -->
 
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('프로그래밍 기초문법(제어문, 배열, 연산자), 클래스, 상속 추상클래스 API, 예외처리')">JAVA</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('')">JavaScript</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('액션태그, 쿠키, 세션, 예외 페이지 자바빈, MVC 패턴의 이해와 MVC 게시판 작성')">JSP/Servlet</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('')">HTML/CSS</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('')">JQuery</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('')">BootStrap5</button>
+            <div></div>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('- DB 설치 및 기본 SQL 작성\n- DB 테이블 생성 및 삭제 등 데이터 관리')">MySQL</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('- EC2(Centos, Windows server 인스턴스 생성 및 연결)\n- RDS, DynamoDB (데이터 베이스 생성 및 파이썬 연결)\n- S3 (버킷 생성, 정적 웹 사이트 호스팅 스토리지관리 및 파이썬 연결)\n- IAM (사용자 추가 액세스 권한 관리, 액세스 키 생성, MFA 설정)\n- VPC를 이용한 네트워크 가상환경 구축 및 AZ을 나누어 ELB 서비스를 활용하여 고가용성 환경 구축\n- 보안그룹을 사용하여 리소스에 대한 인바운드 및 아웃바운드 트래픽제어\n- Auto Scaling 을 이용한 탄력적인 인프라 환경 구축')">AWS</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('- TCP와 UDP 프로토콜에 대한 이해 및 Cisco Packet Tracer, GNS3 사용\n- 스위치 VLAN 구성 및 switch-interface 설정\n- Native-VLAN, STP, ACL, NAT 등 보안구성\n- Static, RIP, OSPF 정적 및 동적 라우팅 설정\n- EtherChannel을 구성하여 대역폭 확장\n- DHCP 구성으로 동적 IP할당')">Network</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('Windows Server 및 Linux 등 가상화 서버환경 구축')">Vmware</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('- Vmware, VirtualBox를 이용한 Windows Server 가상화 환경 구축\n- Active Directory 를 사용하여 DNS및 네트워크 통합관리\n- 그룹 정책관리 도메인, OU, 사이트 관리 GPO 생성\n- IIS 웹 사이트 구성 및 인증 설정')">Windows server</button>
+            <button type="button" style="background-color:white; border-color:black; color:black" onclick="alert('- Vmware, VirtualBox 를 이용한 Centos, Ubuntu 설치 및 구성\n- Xshell, Putty 등 원격 접속 및 원격 환경 구축\n- cli 환경 사용을 위한 기본적인 vi 편집기 사용\n- DB, web, mail, DNS 서버 구축 및 운용\n- Git 을 이용하여 windows클라이언트와 형상관리 환경 구축')">Linux</button>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>(클라우드운영관리)클라우드 아키텍처 운영 및 보안 전문가 양성</h3>
-            <span class="education-date">2021년 05월 06일 ~ 2021년 10월 06일</span>
-            <h4>90일, 총 800시간<br>
-                KG아이티뱅크학원 - 수료</h4>
-            <!-- <p>
-                HW운영관리,NW운영관리,IT시스템서비스수준관리,보안운영관리,DB운영관리,응용SW운영관리,IT시스템통합운영관리,ITCookBook,파이썬forBeginner,IT시스템운영안정성관리,아마존웹서비스AWS패턴별 구축.운용 가이드,오픈스택 관리바이블,파이썬 실무 프로그래밍,IT시스템 사용자 지원,프로그래밍 언어 활용,소프트웨어 개발 보안 구축,시스템 보안 구축,정보시스템 진단,IT시스템자원획득관리,배워서 바로 쓰는 14가지 AWS 구축 패턴
-            </p> -->
+            <h3>학점은행제 컴퓨터 공학 전공</h3>
+            <span class="education-date">2020년 10월 31일 ~ </span>
+            <h4></h4>
         </div>
         <!-- End .education-block -->
 
@@ -134,11 +150,15 @@
                 코리아아이티 아카데미학원 - 수료</h4>
         </div>
         <!-- End .education-block -->
-
+        
         <div class="education-block">
-            <h3>학점은행제 컴퓨터공학전공</h3>
-            <span class="education-date">2020년 10월 31일 ~ </span>
-            <h4></h4>
+            <h3>(클라우드운영관리)클라우드 아키텍처 운영 및 보안 전문가 양성</h3>
+            <span class="education-date">2021년 05월 06일 ~ 2021년 10월 06일</span>
+            <h4>90일, 총 800시간<br>
+                KG아이티뱅크학원 - 수료</h4>
+            <!-- <p>
+                HW운영관리,NW운영관리,IT시스템서비스수준관리,보안운영관리,DB운영관리,응용SW운영관리,IT시스템통합운영관리,ITCookBook,파이썬forBeginner,IT시스템운영안정성관리,아마존웹서비스AWS패턴별 구축.운용 가이드,오픈스택 관리바이블,파이썬 실무 프로그래밍,IT시스템 사용자 지원,프로그래밍 언어 활용,소프트웨어 개발 보안 구축,시스템 보안 구축,정보시스템 진단,IT시스템자원획득관리,배워서 바로 쓰는 14가지 AWS 구축 패턴
+            </p> -->
         </div>
         <!-- End .education-block -->
     </div>
@@ -183,25 +203,6 @@
         </div>
     </div>
     <!-- End #projects -->
-
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>AWS</li>
-            <li>MySQL</li>
-            <li>JAVA</li>
-            <li>HTML/CSS</li>
-            <li>JavaScript</li>
-            <li>JQuery</li>
-            <li>BootStrap5</li>
-            <li>JSP/Servlet</li>
-            <li>Network</li>
-            <li>Vmware</li>
-            <li>Windows server</li>
-            <li>Linux</li>
-        </ul>
-    </div>
-    <!-- End #skills -->
 
     <div id="contact">
         <h2>Get in Touch</h2>
